# Kafka-Flink-with-Helm-and-Argo-CD

./: .gitignore  .ignore  GenAI-Enabled-Data-Platform-Architecture.md  Makefile  README.md  docker-compose.yml
airflow/dags/: dbt_warehouse_schedule.py
analytics/dbt/: Dockerfile  dbt_project.yml
analytics/sql/: init.sql
argocd/: dev.yaml  prd.yaml  qa.yaml
charts/realtime-app/: Chart.yaml  values.yaml
connect/connector-configs/: debezium-mysql-mdm.json
docs/: architecture.md  architecture_design.md  runbook.md
docs/adr/: 0001-dual-local-runtime-modes.md  0002-gitops-with-helm-escape-hatch.md  0003-trino-iceberg-query-path.md  0004-cdc-based-mdm-enrichment-flow.md  0005-unified-day2-operations-make-targets.md  0006-medallion-architecture-with-dbt.md  0007-airflow-for-orchestration.md  README.md
environments/dev/: values.yaml
environments/prd/: values.yaml
environments/qa/: values.yaml
iceberg-writer/: Dockerfile  pyproject.toml
iceberg-writer/app/: main.py
mdm-cdc-producer/: Dockerfile  pyproject.toml
mdm-cdc-producer/app/: main.py
mdm-pyspark-sync/: Dockerfile
mdm-pyspark-sync/app/: main.py
mdm-writer/: Dockerfile  pyproject.toml
mdm-writer/app/: main.py
mdm/sql/: init.sql
metadata/openmetadata/: README.md
observability/prometheus/: prometheus.yml
processor/: Dockerfile  pom.xml
producer/: Dockerfile  pyproject.toml
producer/app/: main.py
scripts/: bootstrap-kind.sh  build-images.sh  check-iceberg-streaming-k8s.sh  check-iceberg-streaming.sh  check-pipeline-topics.sh  compose-up.sh  consume-topic.sh  create-topics.sh  init-minio.sh  list-topics.sh  mock_schema_registry.py  register-connectors.sh  register-mdm-connectors.sh  start-airflow.sh  trino-sql.sh  trino_query.py
trino/etc/: jvm.config  node.properties
(+44 files in other folders)
